tests/errors/type6.ramen
SELECT CASE WHEN false THEN 1 WHEN 1 THEN 2 WHEN true THEN 3 ELSE 4 END AS x;
